--- a/app/src/app/shared/components/information/information.component.scss
+++ b/app/src/app/shared/components/information/information.component.scss
@@ -1,3 +1,13 @@
 .sourceid a{
   display: block;
 }
+
+.app-information-description {
+  max-width: 15%;
+  min-width: 15%;
+}
+
+.app-information-content {
+  max-width: 85%;
+  min-width: 85%;
+}
